KAS-KDF to KDA name
-changed README.md and index.html references from KAS-KDF to KDA
-changed KAS-KDF references in the SP800-56Cr1/r2 specs to KDA

--- a/src/draft-hammett-acvp-kas-kdf-hkdf.adoc
+++ b/src/draft-hammett-acvp-kas-kdf-hkdf.adoc
@@ -1,4 +1,4 @@
-= ACVP KAS KDF HKDF Specification
+= ACVP KDA HKDF Specification
 :doctype: internet-draft
 :docname: acvp-kas-kdf-hkdf-sp800-56c
 :docnumber: draft-ietf-acvp-sub-kas-kdf-hkdf-sp800-56c
@@ -26,8 +26,8 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: KAS-KDF-HKDF SP800-56C
-:algo-short-name: KAS-KDF-HKDF SP800-56C
+:spec-algorithm: KDA-HKDF SP800-56C
+:algo-short-name: KDA-HKDF SP800-56C
 
 include::common/common-sections/00-abstract.adoc[]
 
