--- a/src/kas/sp800-56c/hkdf/sections/03-supported.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/03-supported.adoc
@@ -1,8 +1,8 @@
 
 [#supported_algs]
-== Supported KAS-KDF HKDF
+== Supported KDA HKDF
 
-The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
+The following key derivation algorithms *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-KDF / HKDF / SP800-56Cr1
-* KAS-KDF / HKDF / SP800-56Cr2
+* KDA / HKDF / SP800-56Cr1
+* KDA / HKDF / SP800-56Cr2
