--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -1,7 +1,7 @@
 [#properties]
 
 [[prereq_algs]]
-=== Required Prerequisite Algorithms for KAS KDF Validations
+=== Required Prerequisite Algorithms for KDA Validations
 
 Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
 
@@ -24,23 +24,23 @@ A registration *SHALL* use these properties:
 |===
 | JSON Value| Description| JSON Type| Valid Values
 
-| algorithm | The algorithm under test | value | KAS-KDF
+| algorithm | The algorithm under test | value | KDA
 | mode | The mode under test | value | HKDF
-| revision | The algorithm testing revision to use. | value | "Sp800-56Cr1"
+| revision | The algorithm testing revision to use. | value | "Sp800-56Cr1" or "Sp800-56Cr2"
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | fixedInfoPattern | The pattern used for fixedInfo construction. | string | See <<fixedinfopatcon>>
 | encoding | The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string | concatenation 
-| hmacAlg | The HMAC modes supported by the KDF. | array of string | See <<hmacAlg>>
+| hmacAlg | The HMAC modes supported by the KDA. | array of string | See <<hmacAlg>>
 | macSaltMethods | How the salt is determined (default being all 00s, random being a random salt). | array of string | default, random
 | z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
 | l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
-| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false 
+| performMultiExpansionTests | Should multi expansion runs of the KDA be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false 
 |===
 
 [[fixedinfopatcon]]
 ==== FixedInfoPatternConstruction
 
-IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDF construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.  Also, when l is used for fixedInfo it is expected to be and is processed as a big endian byte string.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDA construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.  Also, when l is used for fixedInfo it is expected to be and is processed as a big endian byte string.
 
 Pattern candidates:
 
@@ -104,7 +104,7 @@ The following hash functions MAY be advertised by an ACVP compliant client under
 [source,json]
 ----
 {
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "HKDF",
   "revision": "Sp800-56Cr1",
   "fixedInfoPattern": "uPartyInfo||vPartyInfo||l",
@@ -142,7 +142,7 @@ The following hash functions MAY be advertised by an ACVP compliant client under
 [source,json]
 ----
 {
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "HKDF",
   "revision": "Sp800-56Cr2",
   "fixedInfoPattern": "uPartyInfo||vPartyInfo||t||l",
