--- a/src/kas/sp800-56c/hkdf/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/06-test-vectors.adoc
@@ -10,44 +10,44 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tgId | Test group identifier | integer
 | testType | Describes the operation the client should perform on the tests data | string
 | tests | Array of individual test cases | See <<testCase>>
-| kdfConfiguration | Describes the Kdf configuration values used for single expansion groups. | See <<kdfconfig>>
-| kdfMultiExpansionConfiguration | Describes the Kdf configuration values used for multi expansion groups. | See <<kdfmulticonfig>>
+| kdfConfiguration | Describes the KDA configuration values used for single expansion groups. | See <<kdfconfig>>
+| kdfMultiExpansionConfiguration | Describes the KDA configuration values used for multi expansion groups. | See <<kdfmulticonfig>>
 |===
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' the group is addressing.
 
 [#kdfconfig]
-==== KDF Configuration JSON Schema
+==== KDA Configuration JSON Schema
 
-Describes the KDF configuration for use under the test group.
+Describes the KDA configuration for use under the test group.
 
 .KdfConfiguration JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType| The type of KDF to use for the group. | value - HKDF
+| kdfType| The type of KDA to use for the group. | value - HKDF
 | saltMethod | The strategy used for salting. | value - default (all 00s), random
 | saltLen | The bit length of the salt. | integer
 | fixedInfoPattern| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
 | fixedInfoEncoding| The encoding used for constructing the fixedInfo. | value.
 | hmacAlg | The MAC function used in the KDF. | value 
-| l | the bit length of keying material to derive from the KDF | value
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [#kdfmulticonfig]
-==== KDF Multi Expansion Configuration JSON Schema
+==== KDA Multi Expansion Configuration JSON Schema
 
-Describes the KDF Multi Expansion configuration for use under the test group.
+Describes the KDA Multi Expansion configuration for use under the test group.
 
 .KdfConfiguration JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType| The type of KDF to use for the group. | value - HKDF
+| kdfType| The type of KDA to use for the group. | value - HKDF
 | saltMethod | The strategy used for salting. | value - default (all 00s), random
 | saltLen | The bit length of the salt. | integer
-| hmacAlg | The MAC function used in the KDF. | value 
-| l | the bit length of keying material to derive from the KDF | value
+| hmacAlg | The MAC function used in the KDA. | value 
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [[testCase]]
@@ -60,28 +60,28 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON Type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set.
-| kdfParameter | Object representing inputs into the KDF for single expansion tests. | See <<kdfParameter>>.
+| kdfParameter | Object representing inputs into the KDA for single expansion tests. | See <<kdfParameter>>.
 | fixedInfoPartyU | Fixed information specific to party U for single expansion tests. | See <<fixedInfo>>.
 | fixedInfoPartyV | Fixed information specific to party V for single expansion tests. | See <<fixedInfo>>.
-| kdfMultiExpansionParameter | Object representing inputs into the KDF for multi expansion tests. | See <<kdfMultiExpansionParameter>>.
+| kdfMultiExpansionParameter | Object representing inputs into the KDA for multi expansion tests. | See <<kdfMultiExpansionParameter>>.
 
 |===
 
 [[kdfParameter]]
-==== KDF Parameter JSON Schema
+==== KDA Parameter JSON Schema
 
-KDF specific options used for the test case.
+KDA specific options used for the test case.
 
 .KDF Parameter JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType | The type of KDF utilized. | value
+| kdfType | The type of KDA utilized. | value
 | salt | The salt used for the test case. | value
 | algorithmId | The random "algorithmId" used for the test case when applicable to the fixedInfo pattern. | value
 | context | The random "context" used for the test case when applicable to the fixedInfo pattern. | value
 | label | The random "label" used for the test case when applicable to the fixedInfo pattern. | value
-| l | the bit length of keying material to derive from the KDF | value
+| l | the bit length of keying material to derive from the KDA | value
 | z | shared secret z value to be used for the test case. | value
 | t | secondary shared secret t.  For <<SP800-56Cr2>> only. | value
 |===
@@ -100,9 +100,9 @@ Fixed information that is included for party U/V for fixed info construction
 |===
 
 [[kdfMultiExpansionParameter]]
-==== KDF Multi Expansion Parameter JSON Schema
+==== KDA Multi Expansion Parameter JSON Schema
 
-KDF specific options used for the test case.
+KDA specific options used for the test case.
 
 .KDF Multi Expansion Parameter JSON Object
 |===
@@ -113,7 +113,7 @@ KDF specific options used for the test case.
 |===
 
 [[iterationParameters]]
-===== KDF Multi Expansion IterationParameters JSON Schema
+===== KDA Multi Expansion IterationParameters JSON Schema
 
 The per multi expansion iteration specific parameters used within a test case.
 
@@ -127,14 +127,14 @@ The per multi expansion iteration specific parameters used within a test case.
 [[app-vs-ex]]
 === Example Test Vectors JSON
 
-The following is a example JSON object for KAS-KDF HKDF test vectors sent from the ACVP server to the crypto module.
+The following is a example JSON object for KDA HKDF test vectors sent from the ACVP server to the crypto module.
 
 .Vector Set JSON Example SP800-56Cr1
 [source,json]
 ---- 
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "HKDF",
   "revision": "Sp800-56Cr1",
   "isSample": true,
@@ -373,7 +373,7 @@ The following is a example JSON object for KAS-KDF HKDF test vectors sent from t
 ----
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "HKDF",
   "revision": "Sp800-56Cr2",
   "isSample": true,
