--- a/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
@@ -9,9 +9,9 @@ A registration *SHALL* use these properties:
 |===
 | JSON Value| Description| JSON Type| Valid Values
 
-| algorithm | The algorithm under test| value| KAS-KDF
+| algorithm | The algorithm under test| value| KDA
 | mode | The mode under test| value| OneStep
-| revision | The algorithm testing revision to use.| value| "Sp800-56Cr1"
+| revision | The algorithm testing revision to use.| value| "Sp800-56Cr1" or "Sp800-56Cr2"
 | prereqVals | Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
 | auxFunctions | The auxiliary capabilities of the implementation.| array of <<auxfunc>>| See <<auxfunc>>
 | fixedInfoPattern | The pattern used for fixedInfo construction. | string| See <<fixedinfopatcon>>
@@ -21,7 +21,7 @@ A registration *SHALL* use these properties:
 |===
 
 [[prereq_algs]]
-==== Prerequisite Algorithms for KAS KDF Validations
+==== Prerequisite Algorithms for KDA Validations
 
 Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
 
@@ -48,7 +48,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 [[fixedinfopatcon]]
 ==== FixedInfoPatternConstruction
 
-IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDF construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDA construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
 
 Pattern candidates:
 
@@ -98,7 +98,7 @@ Evaluated as:
 [source,json]
 ----
 {
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "OneStep",
   "revision": "Sp800-56Cr1",
   "prereqVals": [
