--- a/src/kas/sp800-56c/onestep/sections/07-responses.adoc
+++ b/src/kas/sp800-56c/onestep/sections/07-responses.adoc
@@ -45,7 +45,7 @@ Here is an abbreviated example of the response.  Note there is no difference in 
 ----
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "OneStep",
   "revision": "Sp800-56Cr1",
   "isSample": true,
