--- a/src/kas/sp800-56c/onestepnocounter/sections/03-supported.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/03-supported.adoc
@@ -1,7 +1,7 @@
 
 [#supported_algs]
-== Supported KAS-KDF OneStepNoCounter
+== Supported KDA OneStepNoCounter
 
-The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
+The following key derivation algorithms *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-KDF / OneStepNoCounter / SP800-56Cr2
+* KDA / OneStepNoCounter / SP800-56Cr2
