--- a/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/05-capabilities.adoc
@@ -1,7 +1,7 @@
 [#properties]
 === Property Registration
 
-The {spec-algorithm} mode capabilities are advertised as JSON objects within a root "algorithm" object.  The OneStepNoCounter differs from the OneStep KDF only so far as the "l" property is specified on a per auxiliary function basis, there is no counter or loop within the KDF implementation itself, and as such is limited to producing DKM at a maximum length of the output length of the auxiliary function. 
+The {spec-algorithm} mode capabilities are advertised as JSON objects within a root "algorithm" object.  The OneStepNoCounter differs from the OneStep KDA only so far as the "l" property is specified on a per auxiliary function basis, there is no counter or loop within the KDA implementation itself, and as such is limited to producing DKM at a maximum length of the output length of the auxiliary function. 
 
 A registration *SHALL* use these properties:
 
@@ -9,8 +9,8 @@ A registration *SHALL* use these properties:
 |===
 | JSON Value| Description| JSON Type| Valid Values
 
-| algorithm | The algorithm under test| value| KAS-KDF
-| mode | The mode under test| value| OneStep
+| algorithm | The algorithm under test| value| KDA
+| mode | The mode under test| value| OneStepNoCounter
 | revision | The algorithm testing revision to use.| value| "Sp800-56Cr2"
 | prereqVals | Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
 | auxFunctions | The auxiliary capabilities of the implementation.| array of <<auxfunc>>| See <<auxfunc>>
@@ -20,7 +20,7 @@ A registration *SHALL* use these properties:
 |===
 
 [[prereq_algs]]
-==== Prerequisite Algorithms for KAS KDF Validations
+==== Prerequisite Algorithms for KDA Validations
 
 Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
 
@@ -48,7 +48,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 [[fixedinfopatcon]]
 ==== FixedInfoPatternConstruction
 
-IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDF construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDA construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
 
 Pattern candidates:
 
@@ -96,7 +96,7 @@ Evaluated as:
 [source,json]
 ----
 {
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "OneStepNoCounter",
   "revision": "Sp800-56Cr2",
   "prereqVals": [
