--- a/src/kas/sp800-56c/onestepnocounter/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/06-test-vectors.adoc
@@ -10,26 +10,26 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tgId | Test group identifier | integer
 | testType | Describes the operation the client should perform on the tests data | string
 | tests | Array of individual test cases | See <<testCase>>
-| kdfConfiguration | Describes the Kdf configuration values used for the group | See <<kdfconfig>>
+| kdfConfiguration | Describes the KDA configuration values used for the group | See <<kdfconfig>>
 |===
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' the group is addressing.
 
 [#kdfconfig]
-==== KDF Configuration JSON Schema
+==== KDA Configuration JSON Schema
 
-Describes the KDF configuration for use under the test group.
+Describes the KDA configuration for use under the test group.
 
 .KdfConfiguration JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType | The type of KDF to use for the group. | value - oneStepNoCounter
+| kdfType | The type of KDA to use for the group. | value - oneStepNoCounter
 | saltMethod |  The strategy used for salting. | value - default (all 00s), random
 | fixedInfoPattern | The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
 | fixedInfoEncoding | The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
-| auxFunction | The auxiliary function used in the KDF.| value - See <<auxfunc>>.
-| l | the bit length of keying material to derive from the KDF | value
+| auxFunction | The auxiliary function used in the KDA.| value - See <<auxfunc>>.
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [[testCase]]
@@ -42,29 +42,29 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON Type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set.
-| kdfParameter | Object representing inputs into the KDF | See <<kdfParameter>>.
+| kdfParameter | Object representing inputs into the KDA | See <<kdfParameter>>.
 | fixedInfoPartyU | Fixed information specific to party U | See <<fixedInfo>>.
 | fixedInfoPartyV | Fixed information specific to party V | See <<fixedInfo>>.
 
 |===
 
 [[kdfParameter]]
-==== KDF Parameter JSON Schema
+==== KDA Parameter JSON Schema
 
-KDF specific options used for the test case.
+KDA specific options used for the test case.
 
 .KDF Parameter JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType | The type of KDF utilized. | value
+| kdfType | The type of KDA utilized. | value
 | salt | The salt used for the test case. | value
 | iv | The iv used for the test case. | value
 | algorithmId | The random "algorithID" used for the test case when applicable to the fixedInfo pattern. | value
 | context | The random "context" used for the test case when applicable to the fixedInfo pattern. | value
 | label | The random "label" used for the test case when applicable to the fixedInfo pattern. | value
 | z | shared secret z value to be used for the test case. | value
-| l | the bit length of keying material to derive from the KDF | value
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [[fixedInfo]]
@@ -83,14 +83,14 @@ Fixed information that is included for party U/V for fixed info construction
 [[app-vs-ex]]
 === Example Test Vectors JSON
 
-The following is a example JSON object for KAS-KDF HKDF test vectors sent from the ACVP server to the crypto module.
+The following is a example JSON object for KDA oneStepNoCounter test vectors sent from the ACVP server to the crypto module.
 
 .Vector Set JSON Example
 [source,json]
 ---- 
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "OneStepNoCounter",
   "revision": "Sp800-56Cr2",
   "isSample": true,
