--- a/src/kas/sp800-56c/onestepnocounter/sections/07-responses.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/07-responses.adoc
@@ -45,7 +45,7 @@ Here is an abbreviated example of the response.
 ----
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "OneStepNoCounter",
   "revision": "Sp800-56Cr2",
   "isSample": true,
