--- a/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
@@ -9,18 +9,18 @@ A registration *SHALL* use these properties:
 |===
 | JSON Value| Description| JSON Type| Valid Values
 
-| algorithm| The algorithm under test| value| KAS-KDF
-| mode| The mode under test| value| OneStep
-| revision| The algorithm testing revision to use.| value| "Sp800-56Cr1"
+| algorithm| The algorithm under test| value| KDA
+| mode| The mode under test| value| TwoStep
+| revision| The algorithm testing revision to use.| value| "Sp800-56Cr1" or "Sp800-56Cr2"
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
 | capabilities | The two step configuration objects | array of <<twostepkdf>> | See <<twostepkdf>>
 | z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
 | l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
-| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false
+| performMultiExpansionTests | Should multi expansion runs of the KDA be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false
 |===
 
 [[prereq_algs]]
-==== Prerequisite Algorithms for KAS KDF Validations
+==== Prerequisite Algorithms for KDA Validations
 
 Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
 
@@ -34,7 +34,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 |===
 
 [[twostepkdf]]
-==== Two Step KDF Capabilities
+==== Two Step KDA Capabilities
 
 .TwoStepCapabilities Options
 |===
@@ -43,13 +43,13 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 | macSaltMethod | How the salt is determined (default being all 00s, random being a random salt). | array of string | default, randombased auxiliary functions.
 | fixedInfoPattern | The pattern used for fixedInfo construction. | string | See <<fixedinfopatcon>>
 | encoding | The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string | concatenation 
-| kdfMode | The strategy for running the KDF. | string | counter, feedback, double pipeline iteration
-| macMode | The macMode supported by the KDF. | array of string | CMAC-AES128, CMAC-AES192, CMAC-AES256, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512
-| fixedDataOrder | The counter locations supported by the KDF. | array of string| none, before fixed data, after fixed data, before iterator
-| counterLength | The counter lengths supported for the KDF. | array of integer | 8, 16, 24, 32
+| kdfMode | The strategy for running the KDA. | string | counter, feedback, double pipeline iteration
+| macMode | The macMode supported by the KDA. | array of string | CMAC-AES128, CMAC-AES192, CMAC-AES256, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512
+| fixedDataOrder | The counter locations supported by the KDA. | array of string| none, before fixed data, after fixed data, before iterator
+| counterLength | The counter lengths supported for the KDA. | array of integer | 8, 16, 24, 32
 | supportedLengths | The supported derivation lengths. | domain| Single range (of literal) expected.  Registered value must support the L value provided.
-| supportsEmptyIv | The KDF supports an empty IV (feedback mode). | boolean | true, false
-| requiresEmptyIv | The KDF requires an empty IV (feedback mode). | boolean | true, false
+| supportsEmptyIv | The KDA supports an empty IV (feedback mode). | boolean | true, false
+| requiresEmptyIv | The KDA requires an empty IV (feedback mode). | boolean | true, false
 |===
 
 Note this capabilities object is very similar to the capability object from SP800-108.
@@ -57,7 +57,7 @@ Note this capabilities object is very similar to the capability object from SP80
 [[fixedinfopatcon]]
 ==== FixedInfoPatternConstruction
 
-IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDF construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
+IUTs *MUST* be capable of specifying how the FixedInfo is constructed for the KDA construction. Note that for the purposes of testing against the ACVP system, both uPartyInfo and vPartyInfo are *REQUIRED* to be registered within the fixed info pattern.
 
 Pattern candidates:
 
@@ -104,7 +104,7 @@ Evaluated as:
 [source,json]
 ----
 {
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "TwoStep",
   "revision": "Sp800-56Cr1",
   "prereqVals": [
@@ -161,7 +161,7 @@ Evaluated as:
 [source,json]
 ----
 {
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "TwoStep",
   "revision": "Sp800-56Cr2",
   "prereqVals": [
