--- a/src/kas/sp800-56c/twostep/sections/07-responses.adoc
+++ b/src/kas/sp800-56c/twostep/sections/07-responses.adoc
@@ -43,7 +43,7 @@ Here is an abbreviated example of the response
 ----
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "TwoStep",
   "revision": "Sp800-56Cr1",
   "isSample": true,
