--- a/src/draft-hammett-acvp-kas-kdf-onestepnocounter.adoc
+++ b/src/draft-hammett-acvp-kas-kdf-onestepnocounter.adoc
@@ -1,4 +1,4 @@
-= ACVP KAS KDF OneStep Specification
+= ACVP KDA OneStep No Counter Specification
 :doctype: internet-draft
 :docname: acvp-kas-kdf-onestepnocounter-sp800-56c
 :docnumber: draft-ietf-acvp-sub-kas-kdf-onestepnocounter-sp800-56c
@@ -26,8 +26,8 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: KAS-KDF-OneStepNoCounter SP800-56C
-:algo-short-name: KAS-KDF-OneStepNoCounter SP800-56C
+:spec-algorithm: KDA-OneStepNoCounter SP800-56C
+:algo-short-name: KDA-OneStepNoCounter SP800-56C
 
 include::common/common-sections/00-abstract.adoc[]
 
