--- a/src/draft-hammett-acvp-kas-kdf-twostep.adoc
+++ b/src/draft-hammett-acvp-kas-kdf-twostep.adoc
@@ -1,4 +1,4 @@
-= ACVP KAS KDF TwoStep Specification
+= ACVP KDA TwoStep Specification
 :doctype: internet-draft
 :docname: acvp-kas-kdf-twostep-sp800-56c
 :docnumber: draft-ietf-acvp-sub-kas-kdf-twostep-sp800-56c
@@ -26,8 +26,8 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: KAS-KDF-TwoStep SP800-56C
-:algo-short-name: KAS-KDF-TwoStep SP800-56C
+:spec-algorithm: KDA-TwoStep SP800-56C
+:algo-short-name: KDA-TwoStep SP800-56C
 
 include::common/common-sections/00-abstract.adoc[]
 
