--- a/src/kas/sp800-56c/hkdf/sections/07-responses.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/07-responses.adoc
@@ -44,7 +44,7 @@ Here is an abbreviated example of the response
 ----
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "HKDF",
   "revision": "Sp800-56Cr1",
   "isSample": true,
@@ -108,7 +108,7 @@ Here is an abbreviated example of the response
 ----
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "HKDF",
   "revision": "Sp800-56Cr2",
   "isSample": true,
