--- a/src/kas/sp800-56c/onestep/sections/04-testtypes.adoc
+++ b/src/kas/sp800-56c/onestep/sections/04-testtypes.adoc
@@ -2,11 +2,11 @@
 [#testtypes]
 == Test Types and Test Coverage
 
-The ACVP server performs a set of tests on the KDFs specific to the KAS protocol in order to assess the correctness and robustness of the implementation. A typical ACVP validation session *SHALL* require multiple tests to be performed for every supported permutation of KDF capabilities. This section describes the design of the tests used to validate implementations of KAS-KDF algorithms. 
+The ACVP server performs a set of tests on the KDAs specific to the KAS protocol in order to assess the correctness and robustness of the implementation. A typical ACVP validation session *SHALL* require multiple tests to be performed for every supported permutation of KDA capabilities. This section describes the design of the tests used to validate implementations of KDA algorithms. 
 
 === Test Types
 				
-There are two test types for KAS-KDF testing:
+There are two test types for KDA testing:
 
 * "AFT" - Algorithm Function Test. In the AFT test mode, the IUT *SHALL* act as a party in the Key Agreement with the ACVP server. The server *SHALL* generate and provide all necessary information for the IUT to perform a successful key agreement; both the server and IUT *MAY* act as party U/V.
 
@@ -22,4 +22,4 @@ The tests described in this document have the intention of ensuring an implement
 
 ==== Requirements Not Covered
 
-* SP 800-56Ar3 / SP 800-56Br2 - ASN.1 encoding for the KDF is not currently supported.
+* SP 800-56Ar3 / SP 800-56Br2 - ASN.1 encoding for the KDA is not currently supported.
