--- a/src/kas/sp800-56c/twostep/sections/03-supported.adoc
+++ b/src/kas/sp800-56c/twostep/sections/03-supported.adoc
@@ -1,8 +1,8 @@
 
 [#supported_algs]
-== Supported KAS-KDF OneStep
+== Supported KDA TwoStep
 
-The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
+The following key derivation algorithms *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-KDF / TwoStep / SP800-56Cr1
-* KAS-KDF / TwoStep / SP800-56Cr2
+* KDA / TwoStep / SP800-56Cr1
+* KDA / TwoStep / SP800-56Cr2
