--- a/src/kas/sp800-56c/twostep/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56c/twostep/sections/06-test-vectors.adoc
@@ -10,47 +10,47 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tgId | Test group identifier | integer
 | testType | Describes the operation the client should perform on the tests data | string
 | tests | Array of individual test cases | See <<testCase>>
-| kdfConfiguration | Describes the Kdf configuration values used for the group | See <<kdfconfig>>
-| kdfConfiguration | Describes the Kdf configuration values used for single expansion groups. | See <<kdfconfig>>
-| kdfMultiExpansionConfiguration | Describes the Kdf configuration values used for multi expansion groups. | See <<kdfmulticonfig>>
+| kdfConfiguration | Describes the KDA configuration values used for the group | See <<kdfconfig>>
+| kdfConfiguration | Describes the KDA configuration values used for single expansion groups. | See <<kdfconfig>>
+| kdfMultiExpansionConfiguration | Describes the KDA configuration values used for multi expansion groups. | See <<kdfmulticonfig>>
 |===
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' the group is addressing.
 
 [#kdfconfig]
-==== KDF Configuration JSON Schema
+==== KDA Configuration JSON Schema
 
-Describes the KDF configuration for use under the test group.
+Describes the KDA configuration for use under the test group.
 
 .KdfConfiguration JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType| The type of KDF to use for the group. | value - twostep
+| kdfType| The type of KDA to use for the group. | value - twostep
 | satMethod|  The strategy used for salting. | value - default (all 00s), random
 | fixedInfoPattern| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
 | fixedInfoEncoding| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
-| macMode| The MAC function used in the KDF.| value 
+| macMode| The MAC function used in the KDA.| value 
 | counterLocation| The counter location. | value
 | counterLen| The counter length. | value
 | ivLen| The iv length. | value
-| l | the bit length of keying material to derive from the KDF | value
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [#kdfmulticonfig]
-==== KDF Multi Expansion Configuration JSON Schema
+==== KDA Multi Expansion Configuration JSON Schema
 
-Describes the KDF Multi Expansion configuration for use under the test group.
+Describes the KDA Multi Expansion configuration for use under the test group.
 
 .KdfConfiguration JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType| The type of KDF to use for the group. | value - HKDF
+| kdfType| The type of KDA to use for the group. | value - TwoStep
 | saltMethod | The strategy used for salting. | value - default (all 00s), random
 | saltLen | The bit length of the salt. | integer
-| hmacAlg | The MAC function used in the KDF. | value 
-| l | the bit length of keying material to derive from the KDF | value
+| hmacAlg | The MAC function used in the KDA. | value 
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [[testCase]]
@@ -63,30 +63,30 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON Type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set.
-| kdfParameter | Object representing inputs into the KDF for single expansion tests. | See <<kdfParameter>>.
+| kdfParameter | Object representing inputs into the KDA for single expansion tests. | See <<kdfParameter>>.
 | fixedInfoPartyU | Fixed information specific to party U for single expansion tests. | See <<fixedInfo>>.
 | fixedInfoPartyV | Fixed information specific to party V for single expansion tests. | See <<fixedInfo>>.
-| kdfMultiExpansionParameter | Object representing inputs into the KDF for multi expansion tests. | See <<kdfMultiExpansionParameter>>.
+| kdfMultiExpansionParameter | Object representing inputs into the KDA for multi expansion tests. | See <<kdfMultiExpansionParameter>>.
 
 |===
 
 [[kdfParameter]]
-==== KDF Parameter JSON Schema
+==== KDA Parameter JSON Schema
 
-KDF specific options used for the test case.
+KDA specific options used for the test case.
 
 .KDF Parameter JSON Object
 |===
 | JSON Value | Description | JSON Type
 
-| kdfType | The type of KDF utilized. | value
+| kdfType | The type of KDA utilized. | value
 | salt | The salt used for the test case. | value
 | iv | The iv used for the test case. | value
 | algorithmId | The random "algorithID" used for the test case when applicable to the fixedInfo pattern. | value
 | context | The random "context" used for the test case when applicable to the fixedInfo pattern. | value
 | label | The random "label" used for the test case when applicable to the fixedInfo pattern. | value
 | z | shared secret z value to be used for the test case. | value
-| l | the bit length of keying material to derive from the KDF | value
+| l | the bit length of keying material to derive from the KDA | value
 |===
 
 [[fixedInfo]]
@@ -103,9 +103,9 @@ Fixed information that is included for party U/V for fixed info construction
 |===
 
 [[kdfMultiExpansionParameter]]
-==== KDF Multi Expansion Parameter JSON Schema
+==== KDA Multi Expansion Parameter JSON Schema
 
-KDF specific options used for the test case.
+KDA specific options used for the test case.
 
 .KDF Multi Expansion Parameter JSON Object
 |===
@@ -116,7 +116,7 @@ KDF specific options used for the test case.
 |===
 
 [[iterationParameters]]
-===== KDF Multi Expansion IterationParameters JSON Schema
+===== KDA Multi Expansion IterationParameters JSON Schema
 
 The per multi expansion iteration specific parameters used within a test case.
 
@@ -137,7 +137,7 @@ The following is a example JSON object for KAS-FFC test vectors sent from the AC
 ---- 
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "TwoStep",
   "revision": "Sp800-56Cr1",
   "isSample": true,
@@ -428,7 +428,7 @@ The following is a example JSON object for KAS-FFC test vectors sent from the AC
 ---- 
 {
   "vsId": 0,
-  "algorithm": "KAS-KDF",
+  "algorithm": "KDA",
   "mode": "TwoStep",
   "revision": "Sp800-56Cr2",
   "isSample": true,
