corrects TDES mode references
corrects TDES mode references

https://github.com/usnistgov/ACVP/issues/1286

--- a/src/drbg/sections/97-examples.adoc
+++ b/src/drbg/sections/97-examples.adoc
@@ -1,7 +1,7 @@
 [[app-reg-ex]]
 == Example DRBG Capabilities JSON Object
 
-The following is a example JSON object advertising support for ctrDRBG with 3KeyTDEA and all key sizes of AES.
+The following is a example JSON object advertising support for ctrDRBG with TDES and all key sizes of AES.
 
 ....
 {
@@ -323,7 +323,7 @@ The following is a example JSON object for ctrDRBG test vectors sent from the AC
   { "acvVersion": <acvp-version> },
   { "vectorSetId": 1133,
     "algorithm": "ctrDRBG",
-    "mode": "3KeyTDEA",
+    "mode": "TDES",
     "revision": "1.0",
     "testGroups": [
       {
@@ -608,7 +608,7 @@ The following is a example JSON object for hashDRBG test vectors sent from the A
 [[app-results-ex]]
 == Example Test Results JSON Object
 
-The following is a example JSON object for ctrDRBG with 3KeyTDEA test results sent from the crypto module to the ACVP server.
+The following is a example JSON object for ctrDRBG with TDES test results sent from the crypto module to the ACVP server.
 
 ....
 [{
