--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -133,6 +133,8 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 | AES-CCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 256, "Inc": 8}| {"Min": 56, "Max": 104, "Inc": 8}| | | | {"Min": 0, "Max": 524288, "Inc": any}| [32, 48, 64, 80, 96, 112, 128]
 |===
 
+NOTE: The ivGenMode property is used for AES-GCM/AES-XPN algorithms to document which IV construction method the implementation conforms to: the deterministic construction defined in SP 800-38D section 8.2.1 or the RBG-based construction defined in SP 800-38D section 8.2.2.
+
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for the XTS block cipher algorithm:
 
 [[property_grid_xts]]
