Clarify xof outputLen values
Clarify that the outputLen property may either be a single range or a single literal value.

https://github.com/usnistgov/ACVP-Server/issues/184

--- a/src/xof/sections/05-capabilities.adoc
+++ b/src/xof/sections/05-capabilities.adoc
@@ -45,4 +45,4 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 | TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | |
 |===
 
-NOTE: For cSHAKE, ParallelHash, and TupleHash, the value for the outputLen property must consist of a single range object. This restriction is made to simplify the implementation of the Monte Carlo Tests for these algorithms (see <<MC_test>>).
+NOTE: For cSHAKE, ParallelHash, and TupleHash, the value for the outputLen property must consist either of a single range object or a single literal value. This restriction is made to simplify the implementation of the Monte Carlo Tests for these algorithms (see <<MC_test>>).
