Clarify SHAKE outputLen values
Note that the outputLen property may either be a single range or a single literal value.

https://github.com/usnistgov/ACVP-Server/issues/184

--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -15,7 +15,7 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 | revision| The algorithm testing revision to use.| string
 | inBit| Implementation does accept bit-oriented messages| boolean
 | inEmpty| Implementation does accept null (zero-length) messages| boolean
-| outputLen| Output length for SHAKE| domain
+| outputLen| Output length for SHAKE. The value for the outputLen property must consist either of a single range object or a single literal value. This restriction is made to simplify the implementation of the Monte Carlo Tests (see <<SHAKE-MCT>>).| domain
 | outBit| SHAKE can output bit-oriented messages| boolean
 | messageLength | The message lengths in bits supported by the IUT. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain. | domain
 | performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
