Correct contradictory statements regarding MCT resultsArray
This change relates to tickets #1297 and #1295

--- a/src/sha/sections/07-responses.adoc
+++ b/src/sha/sections/07-responses.adoc
@@ -36,7 +36,7 @@ The following table describes the JSON elements for each test case object.
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set. | integer
 | md | The IUT's message digest response to an AFT or LDT test | string (hex)
-| resultsArray | Array of JSON objects that represent each iteration of an MCT. Each iteration will contain the msg and md|  array of objects containing the md
+| resultsArray | Array of JSON objects that represent each iteration of an MCT. Each iteration will output the md|  array of objects containing the md
 |===
 
 Note: The tcId *MUST* be included in every test case object sent between the client and the server.
