--- a/src/rsa/sections/05-sigver-capabilities.adoc
+++ b/src/rsa/sections/05-sigver-capabilities.adoc
@@ -19,7 +19,7 @@ The following RSA / sigVer / FIPS186-2 capabilities *MAY* be advertised by the A
 
 | sigType | supported RSA signature types  - see <<FIPS186-2>>, Section 5 | string | one of {"ansx9.31", "pkcs1v1.5", "pss"}
 | properties | RSA signature verification parameters  - see <<FIPS186-2>>, Section 5 | array | modulo, hashAlg, and saltLen (when sigType is "pss")
-| modulo | supported RSA modulo for signature verification - see <<FIPS186-2>>, Section 5 | integer | any one of the supported modulo sizes {1024, 1536, 2048, 3072, 4096}
+| modulo | supported RSA modulo for signature verification | integer | any one of the supported modulo sizes {1024, 2048, 3072, 4096}
 | hashPair | supported hash algorithms and optional salt length for signature verification for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
 | hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256"}
 | saltLen | supported salt lengths for PSS signature verification - see <<FIPS186-4>>, Section 5.5 | integer | See the note below
