ACVP 1217 XTS tweakMode Updates
Updated the descriptions of the tweakMode capability registration property and test group element to clarify their meanings. Also updated the tweakValue and sequenceNumber descriptions to include their ranges.

https://github.com/usnistgov/ACVP/issues/1217

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -44,7 +44,7 @@ text. | domain
 | aadLen| The supported AAD lengths in bits for AEAD algorithms| domain
 | tagLen| The supported Tag lengths in bits for AEAD algorithms, see <<property_grid_auth>>| array of integers
 | kwCipher| The cipher as defined in SP800-38F for key wrap mode| array of strings
-| tweakMode| The format of tweak value input for AES-XTS. Hex refers to the tweakValue being a literal hex string. Number refers to the tweakValue being an integer number represented as a hex string.| array of strings
+| tweakMode| Indicates the format(s) of the tweak value input for AES-XTS. A value of "hex" indicates that the IUT expects the tweak value input as a hexadecimal string. A value of "number" indicates that the IUT expects to receive a Data Unit Sequence Number.| array of strings
 | keyingOption| The Keying Option used in TDES.  Keying option 1 (1) is 3 distinct keys (K1, K2, K3).  Keying Option 2 (2) is 2 distinct keys only suitable for decrypt (K1, K2, K1). | array of integers
 | overflowCounter| Indicates if the implementation can handle a counter exceeding the maximum value| boolean
 | incrementalCounter| Indicates if the implementation increments the counter (versus decrementing the counter)| boolean
