--- a/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
@@ -110,7 +110,7 @@ Contains properties *REQUIRED* for "noKdfNoKc" registration.
 |===
 | JSON Value| Description| JSON type| Valid Values| Optional
 
-| parameterSet| The parameterSet options for "noKdfNoKc"| object| <<parameter_set>>| No
+| parameterSet| The parameter sets supported| object| <<parameter_set>>| No
 |===
 
 [[kdfNoKc]]
@@ -123,9 +123,9 @@ Contains properties *REQUIRED* for "kdfNoKc" registration.
 |===
 | JSON Value| Description| JSON type| Valid Values| Optional
 
-| kdfOption| The kdf options for "kdfNoKc"| object| <<supported_kdfOption>>| No
-| dkmNonceTypes | the dkmNonceTypes supported | array of string | randomNonce, timestamp, sequence, timestampSequence | Required for dhStatic scheme
-| parameterSet| The parameterSet options for "kdfNoKc"| object| <<parameter_set>>| No
+| kdfOption| The kdf options supported| object| <<supported_kdfOption>>| No
+| dkmNonceTypes | The dkmNonceTypes supported | array of string | randomNonce, timestamp, sequence, timestampSequence | Required for dhStatic scheme
+| parameterSet| The parameter sets supported| object| <<parameter_set>>| No
 |===
 
 [[kdfKc]]
@@ -139,9 +139,10 @@ Contains properties *REQUIRED* for "kdfKc" registration.
 |===
 | JSON Value| Description| JSON type| Valid Values| Optional
 
-| kdfOption| The kdf options for "kdfNoKc"| object| <<supported_kdfOption>>| No
-| kcOption| The kc options for "kdfNoKc"| object| <<supported_kcOption>>| No
-| parameterSet| The parameterSet options for "kdfNoKc"| object| <<parameter_set>>| No
+| kdfOption| The kdf options supported| object| <<supported_kdfOption>>| No
+| dkmNonceTypes | The dkmNonceTypes supported | array of string | randomNonce, timestamp, sequence, timestampSequence | Required for dhStatic scheme
+| kcOption| The kc options supported| object| <<supported_kcOption>>| No
+| parameterSet| The parameter sets supported| object| <<parameter_set>>| No
 |===
 
 [[parameterSet]]
