misc ifc, RSA spec fixes
Clarifies which algorithms are supported by the KAS/KTS-IFC and KAS-IFC-SSC specs.
Corrects several RSA spec typos.

--- a/src/kas/sp800-56br2/sections/03-supported.adoc
+++ b/src/kas/sp800-56br2/sections/03-supported.adoc
@@ -1,7 +1,8 @@
 
 [#supported]
-== Supported KAS-IFC-SSC
+== Supported KAS-IFC and KTS-IFC
 
-The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
+The following key agreement / key transport scheme and test revision pairs *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-IFC-SSC / null / SP800-56Br2
+* KAS-IFC / SP800-56Br2
+* KTS-IFC / SP800-56Br2
