--- a/src/kas/sp800-56br2/ssc/sections/03-supported.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/03-supported.adoc
@@ -1,7 +1,7 @@
 
 [#supported]
-== Supported KAS-IFCs
+== Supported KAS-IFC-SSC
 
-The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
+The following shared secret computation and test revision pair *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-IFC-SSC / null / SP800-56Br2
+* KAS-IFC-SSC / SP800-56Br2
