--- a/src/rsa/sections/05-siggen-capabilities.adoc
+++ b/src/rsa/sections/05-siggen-capabilities.adoc
@@ -25,7 +25,7 @@ The following RSA / sigGen / FIPS186-4 capabilities *MAY* be advertised by the A
 | saltLen | supported salt lengths for PSS signature generation - see <<FIPS186-4>>, Section 5.5 | integer | See the note below
 |===
 
-NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
+NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present if the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
 The following is an example of a registration for RSA / sigGen / FIPS186-4
 
@@ -126,10 +126,10 @@ The following RSA / sigGen / FIPS186-5 capabilities *MAY* be advertised by the A
 | maskFunction | the mask function used, only valid for PSS | array | any non-empty subset of {"mgf1", "shake-128", "shake-256"}
 | hashPair | supported hash algorithms and optional salt length for signature generation for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
 | hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256"}
-| saltLen | supported salt lengths for PSS signature generation - see <<FIPS186-5>>, Section 5.5 | integer | See the note below
+| saltLen | supported salt lengths for PSS signature generation - see <<FIPS186-5>>, Section 5.4 | integer | See the note below
 |===
 
-NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
+NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present if the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
 For an example of the RSA / sigGen / FIPS186-5 registration see the following abbreviated example for PSS
 
